REGRESSION(r281305) [GStreamer] fast/mediastream/getDisplayMedia-frame-rate.html timeouts https://bugs.webkit.org/show_bug.cgi?id=229343

Patch by Philippe Normand <pnormand@igalia.com> on 2021-08-24
Reviewed by Youenn Fablet.

Source/WebCore:

Proxy the video samples from the wrapped mock source to its parent. The test was timing out
because the video samples were never notified to the top level observer in Internals.

* platform/mediastream/gstreamer/MockRealtimeVideoSourceGStreamer.cpp:
(WebCore::MockDisplayCaptureSourceGStreamer::MockDisplayCaptureSourceGStreamer):
(WebCore::MockDisplayCaptureSourceGStreamer::requestToEnd):
(WebCore::MockDisplayCaptureSourceGStreamer::videoSampleAvailable):
* platform/mediastream/gstreamer/MockRealtimeVideoSourceGStreamer.h:

LayoutTests:

* platform/glib/TestExpectations: Test is now passing, in Release at least. Timing out in
Debug but that will be investigated next, there are other mediastream timeouts in Debug.

Canonical link: https://commits.webkit.org/240865@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@281491 268f45cc-cd09-0410-ab3c-d52691b4dbfc